# thefuck

./: MANIFEST.in  pyproject.toml  release.py  requirements.txt  setup.cfg  setup.py
