[metadata]
name = thefuck
version = 3.32
description = Magnificent app which corrects your previous console command
long_description = file: README.md
long_description_content_type = text/markdown
author = Vladimir Iakovlev
author_email = nvbn.rm@gmail.com
url = https://github.com/nvbn/thefuck
license = MIT
license_files =
    LICENSE.md

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
include_package_data = true
zip_safe = false
install_requires =
    psutil
    colorama
    six
    pathlib2 ; python_version < "3.4"
    backports.shutil_get_terminal_size ; python_version < "3.3"
    decorator < 5 ; python_version <= "2.7"
    pyte < 0.8.1 ; python_version <= "2.7"
    decorator ; python_version > "2.7"
    pyte ; python_version > "2.7"
    win_unicode_console ; sys_platform == "win32"

[options.packages.find]
include =
    thefuck
    thefuck.*

[bdist_wheel]
universal = 1
